# plain0

./: .npmrc  AGENTS.md  README.md  features.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tsconfig.json  tsconfig.tools.json  vite.config.ts  vitest.config.ts
.github/workflows/: plain-ci.yml
.pnpm-store/v11/: index.db-shm  index.db-wal
app/: index.html  main.ts  monaco-environment.ts  services.ts  styles.css
app/platform/tauri/: browser-mock.ts  contracts.ts  errors.ts  index.ts  native.ts
docs/: architecture.md  bundle-baseline.json  implementation-plan.md  product-scope.md  testing.md
docs/decisions/: 0001-tauri-workbench-port.md  0002-theme-only-extension-boundary.md  0003-native-git-and-generic-dap.md
docs/research/: 2026-07-18-github-solutions.md
patches/: @codingame__monaco-vscode-api@35.0.1.patch  @codingame__monaco-vscode-extensions-service-override@35.0.1.patch  @codingame__monaco-vscode-theme-service-override@35.0.1.patch
scripts/plain/: check-boundaries.mjs  check-bundle.mjs  check-features.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/browser/: foundation.spec.ts
tests/unit/: bridge.test.ts
tmp-api-patch/: extensions.d.ts  missing-services.js  package.json  services.d.ts  services.js  workbench.js
tmp-api-patch/vscode/: product.json.js
tmp-api-patch/vscode-dts/: vscode.d.ts  vscode.proposed.d.ts
tmp-extension-patch/: index.js  package.json
tmp-theme-patch/: package.json
(+1333 files in other folders)
